# kemoticons

./: CMakeLists.txt  KF5EmoticonsConfig.cmake.in
autotests/: CMakeLists.txt
src/core/: CMakeLists.txt
src/providers/adium/: CMakeLists.txt
src/providers/kde/: CMakeLists.txt
src/providers/pidgin/: CMakeLists.txt
src/providers/xmpp/: CMakeLists.txt
tests/: CMakeLists.txt
